Leftnav fixes, dark mode improvements, hero banner (#71)
* Left Nav Improvements

This should fix a visual issue when using some new types of nav elements

* Dark mode cards improvements

Also, this includes styles for the new Hero blocks

* Added identation to a specific type of link

* Hero block background updates

The hero backgrounds has been replaced with SVG files.

Also, the params has been changed, instead of using numbers, you can now use:

* default
* alternative
* astra
* dse
* luna

* Fix cards (box shadow)

* Add Hero block instructions

* Fix card shadow

* Fix card text color

* Remove toolbar and title when heroBlock

* Fix heroBlock error in firefox

* clean up repo

---------

--- a/gcx/styles/src/css/helios-gcx-titles.css
+++ b/gcx/styles/src/css/helios-gcx-titles.css
@@ -59,7 +59,7 @@
 }
 
 .dark-mode .doc .sidebarblock>.content>.title{
-    color: var(--black);
+    color: var(--white);
 }
 
 
